--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">Neural Point Cloud Diffusion for Disentangled 3D Shape and Appearance Generation</h1>
+          
+          <div class="title is-3">
+            <strong>CVPR 2024</strong>
+            </div>
+
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://pschroeppel.github.io">Philipp Schröppel</a><sup>1</sup>,</span>
@@ -59,7 +64,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2312.14124.pdf"
+                <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Schroppel_Neural_Point_Cloud_Diffusion_for_Disentangled_3D_Shape_and_Appearance_CVPR_2024_paper.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -78,7 +83,7 @@
               </span>
               <!-- Video Link. 
               <span class="link-block">
-                <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
+                <a href="https://www.youtube.com/watch?v=_zumjq9mzHw"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -96,6 +101,15 @@
                   <span>Code</span>
                   </a>
               </span>
+              <span class="link-block">
+                <a href="https://lmb.informatik.uni-freiburg.de/Publications/2024/SB24/poster-neural_point_cloud_diffusion.pdf"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>Poster</span>
+                </a>
+              </span>
             </div>
 
           </div>
@@ -104,6 +118,18 @@
     </div>
   </div>
 </section>
+
+<!-- Paper video. -->
+<div class="columns is-centered has-text-centered">
+  <div class="column is-four-fifths">
+    <!-- <h2 class="title is-3">Video</h2> -->
+    <div class="publication-video">
+      <iframe src="https://www.youtube.com/embed/_zumjq9mzHw?rel=0&amp;showinfo=0"
+              frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
+<!--/ Paper video. -->
 
 
 <section class="section">
@@ -139,18 +165,6 @@
       </div>
     </div>
     <!--/ Abstract. -->
-
-    <!-- Paper video. -->
-    <!-- <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Video</h2>
-        <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/MrKrnHhk8IA?rel=0&amp;showinfo=0"
-                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-      </div>
-    </div> -->
-    <!--/ Paper video. -->
   </div>
 </section>
 
@@ -158,11 +172,13 @@
 <section class="section">
   <div class="container is-max-desktop">
     <!-- coming soon. -->
+    <!-- 
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Project page coming soon!</h2>
       </div>
     </div>
+     -->
     <!--/ coming soon. -->
   </div>
 </section>
@@ -209,7 +225,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="https://arxiv.org/pdf/2312.14124.pdf">
+         href="https://openaccess.thecvf.com/content/CVPR2024/papers/Schroppel_Neural_Point_Cloud_Diffusion_for_Disentangled_3D_Shape_and_Appearance_CVPR_2024_paper.pdf">
         <i class="fas fa-file-pdf"></i>
       </a>
       <a class="icon-link" href="https://github.com/lmb-freiburg/neural-point-cloud-diffusion" class="external-link" disabled>
